--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.4.1",
     "@hookform/resolvers": "^3.9.0",
     "@prisma/client": "^5.17.0",
     "next": "14.2.5",
+    "next-auth": "^5.0.0-beta.19",
     "prisma": "^5.17.0",
     "react": "^18",
     "react-dom": "^18",
