--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "preview-email": "email dev -p 3030"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.4.1",
     "@hookform/resolvers": "^3.9.0",
     "@prisma/client": "^5.17.0",
+    "@react-email/components": "^0.0.22",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
     "next": "14.2.5",
@@ -19,6 +21,7 @@
     "prisma": "^5.17.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-email": "^2.1.6",
     "react-hook-form": "^7.52.1",
     "use-debounce": "^10.0.1",
     "zod": "^3.23.8"
