--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-email/components": "^0.0.22",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
+    "easymde": "^2.18.0",
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.19",
     "prisma": "^5.17.0",
@@ -23,11 +24,14 @@
     "react-dom": "^18",
     "react-email": "^2.1.6",
     "react-hook-form": "^7.52.1",
+    "react-markdown": "^9.0.1",
+    "react-simplemde-editor": "^5.2.0",
     "thirdweb": "^5.43.2",
     "use-debounce": "^10.0.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.14",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
