--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "easymde": "^2.18.0",
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.19",
+    "nodemailer": "^6.9.14",
     "prisma": "^5.17.0",
     "react": "^18",
     "react-dom": "^18",
